[package]
name = "proxy-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1.0"
aya-log-ebpf = "0.1.0"
network-types = "0.0.7"
proxy-common = { path = "../proxy-common" }

[[bin]]
name = "proxy"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []

[patch.crates-io]
aya-ebpf-macros = { path = "../../temp-clones/aya/aya-ebpf-macros" }
