[package]
name = "proxy-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
libc = "0.2"
local-ip-address = "0.6"
proxy-common = { path = "../proxy-common", features = ["userspace"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","fmt"] }
toml = "0.8"

[[bin]]
name = "proxy-test"
path = "src/proxy_main.rs"
